--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -18,6 +18,6 @@
     <input type="submit">
 </form>
 <br>
-<p>Pulled changes</p>
+<p>Small change to changes</p>
 <p>{{ to_display }}</p>
 {% endblock %}
