--- a/flask/templates/base.html
+++ b/flask/templates/base.html
@@ -35,11 +35,11 @@
               <li class="nav-item">
                 <a class="nav-link"></a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://shibboleth.csuchico.edu/idp/profile/cas/login?execution=e1s1">CSUC</a>
+              </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-sm-2" type="text" placeholder="Search">
-              <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-            </form>
+
           </div>
         </div>
       </nav>
