Added info screen with breakdown of how I did the project and what not

--- a/flask/templates/base.html
+++ b/flask/templates/base.html
@@ -39,13 +39,13 @@
                 <a class="nav-link"></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link navbar-brand" href="{{ url_for('howto') }}"><h2>How-To</h2></a>
+                <a class="nav-link navbar-brand" href="{{ url_for('info') }}"><h2>Info</h2></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link"></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link navbar-brand" href="https://shibboleth.csuchico.edu/idp/profile/cas/login?execution=e1s1"><h2>CSUC</h2></a>
+                <a class="nav-link navbar-brand" href="https://portal.csuchico.edu/uPortal/f/u16l1s4/normal/render.uP"><h2>CSUC</h2></a>
               </li>
             </ul>
 
