--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -2,10 +2,14 @@
 
 {% block head %}
 {% endblock %}
-
 {% block body %}
+<div class="text-white mb-3 mx-auto">
+  <h1>Welcome to The Miners-Web(b)!</h1>
+  <h2>Personal website for me: James Miners-Webb</h2>
+  <h4>This website was created for my final project in my capstone course, CSCI 490, to showcase my celebrity text-to-speech web app.</h4>
+</div>
 <div class="card text-white bg-primary mb-3 mx-auto" style="max-width: 42rem;">
-  <div class="card-header"><h1>Create A Conversation</h1></div>
+  <div class="card-header"><h1>Jabbervox</h1><hr><h3>Create A Conversation</h3></div>
   <div class="card-body">
     <h2 class="card-title">Pick Your Speakers</h2>
     <form method="POST">
